2008-06-19  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test03_child_kill.process_kill): Added
	check for command line output.

2008-06-15  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test06_child_kill_missing_pid.process_kill):
	Wrote method.
	(PokerChildrenTestCase.test03_child_kill.process_kill): Added
	search for verbose output.
	(PokerChildrenTestCase.test07_child_force_windows_system): Wrote
	method.
	(PokerChildrenTestCase.test08_brokenKill): Wrote method.
	(PokerChildrenTestCase.test09_brokenWaitPID.process_kill): Wrote
	method.
	(PokerChildrenTestCase.test03_child_kill.process_kill): Added
	check for savepid() output.

2008-06-14  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-currencyclient.py.in
	(FakeCurrencyClientTestCase.test05_mergeNotes.mergeNotes.validate):
	Added check for mergeNotes in verbose message output.
	(FakeCurrencyClientTestCase.getNote): Added check for _buildNote
	and getNote in verbose message output.
	(FakeCurrencyClientTestCase.test03_checkNote.checkNote): Added
	check for checkNote in verbose message output.
	(FakeCurrencyClientTestCase.getCommitedNote): Derived method to
	add search for "commit" output from message printing.
	(FakeCurrencyClientTestCase.getCommitedNote.checkCommitVerboseOutput):
	Derived method to check that "commit" output occurs. 

2008-06-12  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-currencyclient.py.in
	(FakeCurrencyClientTestCase.test04_changeNote.changeNote): Derived
	method to handle different behavior in Fake.
	(FakeCurrencyClientTestCase.test09_getNote_with_id): Derived
	method as test not needed for Fake
	(FakeCurrencyClientTestCase.test07_breakNote.checkOutput): Derived
	method to check for message output from FakeCurrencyClient. 

	* tests/testmessages.py (clear_all_messages): Renamed function
	from clear_messages.

	* tests/test-currencyclient.py.in