@@ -311,6 +311,23 @@ class PokerChildrenTestCase(unittest.TestCase):
         reactor.callLater(1, lambda: d.callback(True))
         return d
 # -----------------------------------------------------------------------------------------------------
+    # -----------------------------------------------------------------------------------------------------
+    def test10_neverReady(self):
+        settings_xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
+<settings verbose="6">
+<web browser="sleep"></web>
+</settings>
+"""
+        self.setSettings(settings_xml)
+        process = pokerchildren.PokerChildBrowser(self.config, self.settings, '0')
+        d = defer.Deferred()
+        def checkReady(result):
+            self.assertEquals(search_output("PokerChildBrowser: no URL in /settings/web, cannot browse web"), True)
+            return result
+        d.addCallback(checkReady)
+        reactor.callLater(1, lambda: d.callback(True))
+        return d
+# -----------------------------------------------------------------------------------------------------
 def GetTestedModule():
     return pokerengineconfig
 
@@ -318,7 +335,7 @@ def GetTestedModule():
 def Run():
     util.DEFAULT_TIMEOUT_DURATION = 200
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test03"
+#    loader.methodPrefix = "test10"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerChildrenTestCase))
     return runner.TrialRunner(reporter.TextReporter,
